@@ -36,7 +36,11 @@ public class ResourceLoader {
   public static JLabel getImageAsJLabel(String imageFile) {
     return new JLabel(getImageAsIcon(imageFile));
   }
-  
+  /**
+   * 
+   * @param imageFile
+   * @return
+   */
   public static ImageIcon getImageAsIcon(String imageFile) {
 	try {
       InputStream in = ResourceLoader.class.getResourceAsStream(imageFile);
