@@ -1,5 +1,5 @@
 # Editor release-wide properties
-editor.release.number=1.5_20070708
+editor.release.number=1.5_20070716
 editor.contributors=Lindsay Bradford, Moe Wynn, Matt Flaherty
 compatible.engine.release.number=Beta 8.2
 compatible.engine.jar.name=YAWLBeta8.2_Standalone.jar
